[tool.poetry]
name = "h5serve"
version = "0.1.0"
description = "Quick prototype of a FastAPI server serving H5 files"
authors = ["Kenneth <kenneth.ng.nym@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
h5grove = "^1.1.0"
aiohttp = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
